--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -45,10 +45,10 @@ jobs:
     steps:
       - name: Set target IP
         run: |
-          STATUS=$(curl -o /dev/null -w "%{http_code}" "http://${{ secrets.board_server_IP }}/env")
+          STATUS=$(curl -o /dev/null -w "%{http_code}" "http://${{ secrets.BOARD_SERVER_IP }}/env")
           echo $STATUS
           if [ $STATUS = 200 ]; then
-            CURRENT_UPSTREAM=$(curl -s "http://${{ secrets.board_server_IP }}/env")
+            CURRENT_UPSTREAM=$(curl -s "http://${{ secrets.BOARD_SERVER_IP }}/env")
           else
             CURRENT_UPSTREAM=green
           fi
@@ -70,7 +70,7 @@ jobs:
         uses: appleboy/ssh-action@master
         with:
           username: ubuntu
-          host: ${{ secrets.board_server_IP }}
+          host: ${{ secrets.BOARD_SERVER_IP }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script_stop: true
           script: |
@@ -80,7 +80,7 @@ jobs:
       - name: Check deploy server URL
         uses: jtalk/url-health-check-action@v3
         with:
-          url: http://${{ secrets.boardServer_IP }}:${{env.STOPPED_PORT}}/env
+          url: http://${{ secrets.BOARD_SERVER_IP }}:${{env.STOPPED_PORT}}/env
           max-attempts: 3
           retry-delay: 10s
 
@@ -88,7 +88,7 @@ jobs:
         uses: appleboy/ssh-action@master
         with:
           username: ubuntu
-          host: ${{ secrets.board_server_IP }}
+          host: ${{ secrets.BOARD_SERVER_IP }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script_stop: true
           script: |
@@ -98,7 +98,7 @@ jobs:
         uses: appleboy/ssh-action@master
         with:
           username: ubuntu
-          host: ${{ secrets.board_server_IP }}
+          host: ${{ secrets.BOARD_SERVER_IP }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script_stop: true
           script: |
