--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -23,10 +23,7 @@ jobs:
         distribution: 'temurin'
     
     - name: Build with Gradle
-      uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
-      with:
-       arguments: build
-        # run : ./gradlew clean build --exclude-task test
+      run : ./gradlew clean build
 
     - name: Login to DockerHub
       uses: docker/login-action@v1
@@ -43,6 +40,16 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      # 깃허브 액션 러너의 아이피를 얻어온다.
+      - name: Get Github action IP
+        id: ip
+        uses: haythem/public-ip@v1.2
+
+      # 환경변수 설정.
+      - name: Setting environment variables
+        run: |
+          echo "AWS_DEFAULT_REGION=ap-northeast-2" >> $GITHUB_ENV
+    
       - name: Set target IP
         run: |
           STATUS=$(curl -o /dev/null -w "%{http_code}" "http://${{ secrets.BOARD_SERVER_IP }}/env")
@@ -77,7 +84,7 @@ jobs:
       - name: Check deploy server URL
         uses: jtalk/url-health-check-action@v3
         with:
-          url: http://${{ secrets.BOARD_SERVER_IP }}:${{env.STOPPED_PORT}}/env
+          url: http://${{ secrets.BOARD_SERVER_IP }}/env
           max-attempts: 5
           retry-delay: 2s
 
