--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -84,9 +84,9 @@ jobs:
       - name: Check deploy server URL
         uses: jtalk/url-health-check-action@v3
         with:
-          url: http://${{ secrets.BOARD_SERVER_IP }}/env
+          url: http://${{ secrets.BOARD_SERVER_IP }}:${{env.STOPPED_PORT}}/env
           max-attempts: 5
-          retry-delay: 2s
+          retry-delay: 15s
 
       - name: Change nginx upstream
         uses: appleboy/ssh-action@master
