--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,51 +1,22 @@
 spring:
-  profiles:
-    active: local
-    group:
-      local: local
-      blue: blue
-      green: green
+  servlet:
+    multipart:
+      max-file-size: 20MB
+      max-request-size: 50MB
 
-server:
-  env: blue
+  jpa:
+    hibernate:
+      ddl-auto: none
+    properties:
+      hibernate:
+        format_sql: true
+    show-sql: true
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
 
----
-
-spring:
-  config:
-    activate:
-      on-profile: local
-
-server:
-  port: 8080
-  address: localhost
-
-serverName: local_server
-
----
-
-spring:
-  config:
-    activate:
-      on-profile: blue
-
-server:
-  port: 8080
-  address: 43.203.85.172
-
-serverName: blue_server
-
----
-
-spring:
-  config:
-    activate:
-      on-profile: green
-
-server:
-  port: 8081
-  address: 43.203.85.172
-
-serverName: green_server
-
----
+logging:
+  level:
+    com:
+      amazonaws:
+        util:
+          EC2MetadataUtils: error
