--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,20 @@
 spring:
-  servlet:
-    multipart:
-      max-file-size: 20MB
-      max-request-size: 50MB
+  profiles:
+    active: dev
 
   jpa:
     hibernate:
       ddl-auto: none
     properties:
       hibernate:
+        show_sql: true
         format_sql: true
-    show-sql: true
+
+  servlet:
+    multipart:
+      max-file-size: 20MB
+      max-request-size: 50MB
+
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
 
