--- a/.github/workflows/dev-cd.yml
+++ b/.github/workflows/dev-cd.yml
@@ -48,9 +48,9 @@ jobs:
 
 
       - name: Build Docker
-        run: docker build --platform linux/amd64 -t ${{ env.DOCKER_HUB_REPOSITORY }} .
+        run: docker build --platform linux/amd64 -t ${{ secrets.DOCKER_HUB_USERNAME }}/mbitboard .
       - name: Push Docker
-        run: docker push ${{ env.DOCKER_HUB_REPOSITORY }}:latest
+        run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/mbtiboard:latest
 
           
 
