--- a/.github/workflows/dev-cd.yml
+++ b/.github/workflows/dev-cd.yml
@@ -47,9 +47,11 @@ jobs:
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
       - name: ✨ Docker Image 빌드 후 DockerHub에 Push
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v4
         with:
+          file: ./Dockerfile
           push: true
+          platforms: linux/arm64
           tags: ${{ env.DOCKER_HUB_REPOSITORY }}:latest
           
 
