--- a/.github/workflows/dev-cd.yml
+++ b/.github/workflows/dev-cd.yml
@@ -40,6 +40,11 @@ jobs:
       - name: ✨ Jar 파일 빌드
         run: ./gradlew bootJar
 
+      - name: ✨ Docker build context 준비
+        run: |
+          mkdir -p docker-context/build/libs
+          cp build/libs/*.jar docker-context/build/libs
+
       - name: ✨ DockerHub에 로그인
         uses: docker/login-action@v2
         with:
@@ -47,12 +52,12 @@ jobs:
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
       - name: ✨ Docker Image 빌드 후 DockerHub에 Push
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v5
         with:
-          file: ./Dockerfile
+          context: docker-context
           push: true
-          platforms: linux/arm64
           tags: ${{ env.DOCKER_HUB_REPOSITORY }}:latest
+
           
 
   backend-docker-pull-and-run:
